--- a/jvm/build.gradle
+++ b/jvm/build.gradle
@@ -9,5 +9,11 @@ dependencies {
     implementation 'com.alibaba:easyexcel:1.1.2-beta5'
 }
 
-sourceCompatibility = "7"
-targetCompatibility = "7"
+sourceCompatibility = '7'
+targetCompatibility = '7'
+
+jar {
+    manifest { attributes 'Main-Class': 'apc.eagle.fx.AppKt' }
+    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+    baseName = 'EagleEye'
+}
