--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,4 +12,5 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
