--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,10 +14,10 @@ android {
 dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha02'
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "androidx.recyclerview:recyclerview:$appcompat_version"
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.core:core-ktx:1.1.0-alpha04'
-    implementation 'androidx.fragment:fragment-ktx:1.1.0-alpha04'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha02'
+    implementation 'androidx.core:core-ktx:1.1.0-alpha05'
+    implementation 'androidx.fragment:fragment-ktx:1.1.0-alpha06'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04'
 }
