--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
-    ext.kotlin_version = '1.3.30'
+    ext {
+        kotlin_version = '1.3.21'
+        appcompat_version = '1.1.0-alpha04'
+    }
     repositories {
         google()
         jcenter()
