--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         minSdkVersion 14
+        //noinspection OldTargetApi
         targetSdkVersion 28
     }
     dataBinding { enabled = true }
@@ -15,9 +16,9 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
-    implementation "androidx.recyclerview:recyclerview:$appcompat_version"
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha06'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.core:core-ktx:1.1.0-alpha05'
-    implementation 'androidx.fragment:fragment-ktx:1.1.0-alpha06'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04'
+    implementation 'androidx.core:core-ktx:1.2.0-alpha02'
+    implementation 'androidx.fragment:fragment-ktx:1.1.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
 }
