--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,15 +10,16 @@ android {
         targetSdkVersion 28
     }
     dataBinding { enabled = true }
+    kotlinOptions { jvmTarget = "1.8" }
 }
 
 dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:$appcompat_version"
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha06'
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.core:core-ktx:1.2.0-alpha02'
-    implementation 'androidx.fragment:fragment-ktx:1.1.0-beta01'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
+    implementation 'androidx.core:core-ktx:1.2.0-alpha03'
+    implementation 'androidx.fragment:fragment-ktx:1.2.0-alpha02'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha03'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta02'
 }
