--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,11 @@
 buildscript {
-    ext {
-        kotlin_version = '1.3.40'
-        appcompat_version = '1.1.0-beta01'
-    }
+    ext { kotlin_version = '1.3.41' }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
