--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,10 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         minSdkVersion 14
-        //noinspection OldTargetApi
-        targetSdkVersion 28
+        targetSdkVersion 29
     }
     dataBinding { enabled = true }
     kotlinOptions { jvmTarget = "1.8" }
@@ -16,10 +15,10 @@ android {
 dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+    implementation 'androidx.appcompat:appcompat:1.2.0-alpha01'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.core:core-ktx:1.2.0-alpha03'
-    implementation 'androidx.fragment:fragment-ktx:1.2.0-alpha02'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha03'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta02'
+    implementation 'androidx.core:core-ktx:1.2.0-rc01'
+    implementation 'androidx.fragment:fragment-ktx:1.2.0-rc03'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-rc03'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
